--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Bienvenido a HyperBlog 1.1</title>
+        <title>HyperBlog 2.0 es un blog del futuro</title>
         <link rel="stylesheet" href="css/estilos.css">
     </head>
     <body>
