--- a/blogpost.html
+++ b/blogpost.html
@@ -14,7 +14,7 @@
             <p>Y este es el p&aacute;rrafo de inicio donde vamos a explicar las cosas
                 incre&iacute;bles que se pueden hacer con ramas
             </p>
-            <p><img src="imagenes/the-office.jpg"/></p>
+            <p><img src="/home/emiliano/Documentos/Platzi/CursoGit-GitHub/practica/ProyectoGitHub/css/imagenes/the-office.jpg"/></p>
             <p>Los blogs son la mejor forma de compartir informacion y tus ideas.
                 Muchos mas que ir a conferencias o salir en Youtube. Excepto si eeres un rockstar. Pero estedaisticamente no lo eres... por ahora</p>
             </p>
