Amore para todos

--- a/blogpost.html
+++ b/blogpost.html
@@ -18,7 +18,7 @@
             <p>Los blogs son la mejor forma de compartir informacion y tus ideas.
                 Muchos mas que ir a conferencias o salir en Youtube. Excepto si eeres un rockstar. Pero estedaisticamente no lo eres... por ahora</p>
             </p>
-            <p>Suscibete y dale like</p>
+            <p>Suscibete y dale like amore</p>
         </div>
         <div id="footer">
             Hecho con amor en Platzi
